infrastructure/flux/apps/cms.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms
  namespace: cms
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: cms
  template:
    metadata:
      labels:
        app: cms
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: cms
        image: codercom/code-server:latest
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: cms
          mountPath: /home/coder/cms
        - name: ssh
          mountPath: /home/coder/.ssh
        - name: config
          mountPath: /home/coder/.config
      volumes:
      - name: cms
        hostPath:
          path: /zpool-ssd/k8s/cms/cms
          type: Directory
      - name: config
        hostPath:
          path: /zpool-ssd/k8s/cms/config
          type: Directory
      - name: ssh
        hostPath:
          path: /zpool-ssd/k8s/code-server/ssh
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: cms
  namespace: cms
spec:
  selector:
    app: cms
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cms
  namespace: cms
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: ListenerSet
    name: cms
    sectionName: https
  hostnames:
  - cms.codesugar.mx
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: cms
      port: 80
